AT-47: IE8 wrapping issue.

--- a/src/webapp/res/css/12_advertising/ad-IE8.css
+++ b/src/webapp/res/css/12_advertising/ad-IE8.css
@@ -45,3 +45,7 @@ tab fix
     padding-bottom: 8px;
 }
 
+#hub-primary .dropdown_2{
+    width: 177px;
+}
+
